# rust-canvas-game-01

./: Cargo.toml  index.html  index.js  package.json  readme.md  render.yaml  trunk.toml
.github/workflows/: gh-pages.yml
images/: images.js  processImages.js
pkg/: game_canvas.d.ts  game_canvas.js  game_canvas_bg.js  game_canvas_bg.wasm  game_canvas_bg.wasm.d.ts  package.json
sounds/: soundManager.js
src/: collisions.rs  lib.rs  map.rs  player.rs  sprites.rs
src/coins/: manage_coins.rs  mod.rs  types.rs
src/collisions/: get_manage_collision_params.rs  get_tiles_around_player.rs  lethal_tile_collision.rs  manage_collision.rs  manage_player_collision_with_tile.rs  mod.rs  normal_tile_collision.rs  types.rs
src/draw/: debug.rs  do_draw_map.rs  draw_map.rs  main_draw.rs  manage_death.rs  manage_sprite_sheet.rs  mod.rs
src/draw/draw_map/: draw_abs.rs  draw_sand.rs  draw_this.rs  draw_this_sw_sh.rs  mod.rs
src/enemies/: enemies_check_collision.rs  enemies_move.rs  mod.rs  types.rs
src/enemies/climber/: climber.rs  mod.rs
src/enemies/crawler/: crawler.rs
src/map/: generate_map_collisions.rs  generate_persisting_entities.rs  manage_spawn_collision.rs  map.rs  map_move.rs  mod.rs  restore_sand_tiles.rs
src/particles/: hit_ground_particles.rs  init_wind_particles.rs  jump_particles.rs  lava_particles.rs  manage_particles.rs  mod.rs  spawn_particles.rs  types.rs  utils.rs  wind_particles.rs
src/player/: init.rs  mod.rs  movement.rs  player_can_still_hang.rs  player_move.rs  stop_movement.rs  types.rs
src/utils/: extern_c.rs  mod.rs  utils.rs
