[package]
name = "game_canvas"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
	"Window", 
	"Document", 
	"HtmlCanvasElement", 
	"CanvasRenderingContext2d",
	"console"
] }
lazy_static = "1.4"
js-sys = "0.3.70"

[lib]
crate-type = ["cdylib", "rlib"]

