[package]
name = "game_canvas"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3.72", features = [
	"Window", 
	"Document", 
	"HtmlCanvasElement", 
	"HtmlImageElement",
	"CanvasRenderingContext2d",
	"console"
] }
lazy_static = "1.4"
js-sys = "0.3.70"
web-time = "1.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

