[package]
name = "game_canvas"
version = "0.1.0"
edition = "2021"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "=0.2.100"
js-sys = "=0.3.77"
web-sys = { version = "=0.3.77", features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "CanvasRenderingContext2d",
  "console"
] }

console_error_panic_hook = { version = "0.1.7", optional = true }
lazy_static = "1.4"
web-time = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.20.3"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
panic = "abort"



